--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <!-- Template CSS -->
   <link href="//fonts.googleapis.com/css?family=Spartan:400,500,600,700,900&display=swap" rel="stylesheet">
   <!-- Template CSS -->
-
+<script>alert("Hello, welcome to my site, I am R.Y")</script>
 </head>
 <body>
   <!-- /Homepage-->
