--- a/index.html
+++ b/index.html
@@ -11,7 +11,20 @@
   <!-- Template CSS -->
   <link href="//fonts.googleapis.com/css?family=Spartan:400,500,600,700,900&display=swap" rel="stylesheet">
   <!-- Template CSS -->
-<script>alert("Hello, welcome to my site, I am R.Y")</script>
+<script>
+let person = prompt("Please enter your name");
+
+
+if (person == "shashank") {
+    alert("hello boss")
+}else if(person==""){
+    alert("welcome user")
+    
+}
+ else{
+    alert("Fuck You  "+ person)
+}
+</script>
 </head>
 <body>
   <!-- /Homepage-->
