--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ if (person == "shashank") {
     
 }
  else{
-    alert("Fuck You  "+ person)
+    alert("Welcome  "+ person)
 }
 </script>
 </head>
